--- a/RooStatsSim/RooStatsSim.csproj
+++ b/RooStatsSim/RooStatsSim.csproj
@@ -328,6 +328,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DLL\WPF.MDI.dll" />
+    <Resource Include="Resources\Skills\PROVOKE.png" />
     <Resource Include="Resources\ConsumableBuff\STR_VIT.png" />
     <Resource Include="Resources\ConsumableBuff\AGI.png" />
     <Resource Include="Resources\ConsumableBuff\AGI_DEX.png" />
@@ -401,7 +402,6 @@
     <Resource Include="Resources\Skills\HEAD_CRUSH.png" />
     <Resource Include="Resources\Skills\MAGNUM_BRAKE.png" />
     <Resource Include="Resources\Skills\PIERCE.png" />
-    <Resource Include="Resources\Skills\PROVOQUE.png" />
     <Resource Include="Resources\Skills\RYAN_RAPIDS.png" />
     <Resource Include="Resources\Skills\SOLID_BLOW.png" />
     <Resource Include="Resources\Skills\SPIRAL_PIERCE.png" />
